--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "bun run src/server.ts",
     "dev": "bun --hot run src/server.ts",
-    "migrate": "prisma migrate dev",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
     "generate": "prisma generate",
     "seed": "prisma db seed",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
@@ -24,6 +25,7 @@
     "@eslint/compat": "^1.2.5",
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
+    "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/sequelize": "^4.28.20",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -44,6 +46,7 @@
     "@prisma/client": "^6.3.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "pg": "^8.13.1",
