--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=8888
-NODE_ENV=development
+NODE_ENV=production
 DATABASE_URL="postgresql://example_user:11223344@localhost:5432/example_db?schema=public"
 JWT_SECRET=secretkey1122
 SESSION_SECRET=11223344
+API_URL=https://example.com
