--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "name": "pgen0x"
   },
   "scripts": {
-    "start": "bun run src/server.ts",
+    "build": "bun build src/server.ts --outdir ./dist --target bun --minify",
+    "start": "bun run dist/server.js",
     "dev": "bun --hot run src/server.ts",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
